scripts/ostool-patched/tests/ui/fail_qemu_override.rs
use ostool::build::CargoQemuOverrideArgs;

fn main() {
    let _ = core::mem::size_of::<CargoQemuOverrideArgs>();
}
